{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 86,
  "lineage": "2c21263e-e972-ca93-923a-e062e20d44d0",
  "resources": [
    {
      "module": "module.instance_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:331173606331:instance/i-0ce6ed081ce7fa2f0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce6ed081ce7fa2f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a501e8bec7d04acd"
              }
            ],
            "primary_network_interface_id": "eni-0a501e8bec7d04acd",
            "private_dns": "ip-10-0-10-193.us-east-2.compute.internal",
            "private_ip": "10.0.10.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0bf118a9173d21e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cad48cc9274ebd7",
            "tags": {
              "Name": "MySQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02762747ae7f0c9aa"
            ]
          },
          "dependencies": [
            "module.instance_private.aws_network_interface.network_interface"
          ]
        }
      ]
    },
    {
      "module": "module.instance_private",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c5cd9a8d0fb0e0d7",
                "device_index": 0,
                "instance": "i-0ce6ed081ce7fa2f0"
              }
            ],
            "id": "eni-0a501e8bec7d04acd",
            "ipv6_address_count": 0,
            "mac_address": "02:d4:ba:e4:82:6e",
            "private_ip": "10.0.10.193",
            "private_ips": [
              "10.0.10.193"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02762747ae7f0c9aa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cad48cc9274ebd7"
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc",
            "module.security_group.aws_security_group.private"
          ]
        }
      ]
    },
    {
      "module": "module.instance_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:331173606331:instance/i-05b7dc59bd8572c39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b7dc59bd8572c39",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0009e4b7efd0a3060"
              }
            ],
            "primary_network_interface_id": "eni-0009e4b7efd0a3060",
            "private_dns": "ip-10-0-0-249.us-east-2.compute.internal",
            "private_ip": "10.0.0.249",
            "public_ip": "18.191.234.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9f8e92622bc4d3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bd07af07d7cba12",
            "tags": {
              "Name": "Nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0866b67fd69cfa8be"
            ]
          },
          "dependencies": [
            "module.instance_public.aws_network_interface.network_interface",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.security_group.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.instance_public",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0009e4b7efd0a3060",
            "ipv6_address_count": 0,
            "mac_address": "02:66:c8:fb:4f:54",
            "private_ip": "10.0.0.249",
            "private_ips": [
              "10.0.0.249"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0866b67fd69cfa8be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bd07af07d7cba12"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.security_group.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07f7de51650578158",
            "domain": "vpc",
            "id": "eipalloc-0a9e5afa4bcb27f12",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0730ed27a6b8acd70",
            "private_dns": "ip-10-0-0-183.us-east-2.compute.internal",
            "private_ip": "10.0.0.183",
            "public_dns": "ec2-18-189-254-225.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.254.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:internet-gateway/igw-04a5d8e8e8dd1f36f",
            "id": "igw-04a5d8e8e8dd1f36f",
            "owner_id": "331173606331",
            "tags": {
              "Name": "internet-gw"
            },
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9e5afa4bcb27f12",
            "id": "nat-0b4546bd7b6ff772d",
            "network_interface_id": "eni-0370540ef2712b619",
            "private_ip": "10.0.0.214",
            "public_ip": "18.189.254.225",
            "subnet_id": "subnet-07bd07af07d7cba12",
            "tags": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c405410d8018a7501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b4546bd7b6ff772d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c405410d8018a750",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a5d8e8e8dd1f36f",
            "id": "r-rtb-09022a91888bb2e831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09022a91888bb2e83",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c405410d8018a750",
            "owner_id": "331173606331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f969ea8a587270ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09022a91888bb2e83",
            "owner_id": "331173606331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a5d8e8e8dd1f36f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63779c61b818c14",
            "route_table_id": "rtb-0c405410d8018a750",
            "subnet_id": "subnet-00cad48cc9274ebd7"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c41a73141d06c30",
            "route_table_id": "rtb-09022a91888bb2e83",
            "subnet_id": "subnet-07bd07af07d7cba12"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:subnet/subnet-00cad48cc9274ebd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-00cad48cc9274ebd7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331173606331",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:subnet/subnet-07bd07af07d7cba12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07bd07af07d7cba12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331173606331",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:vpc/vpc-0f1c8f7a585ff0678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04333cc18418340c6",
            "default_route_table_id": "rtb-0eae5762a20a83cfa",
            "default_security_group_id": "sg-080f25b7c5d8c4115",
            "dhcp_options_id": "dopt-a08016cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f1c8f7a585ff0678",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eae5762a20a83cfa",
            "owner_id": "331173606331",
            "tags": {
              "Name": "vpc-hw"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:security-group/sg-02762747ae7f0c9aa",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02762747ae7f0c9aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "MySql",
            "name_prefix": "",
            "owner_id": "331173606331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:331173606331:security-group/sg-0866b67fd69cfa8be",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0866b67fd69cfa8be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "331173606331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NGINX"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1c8f7a585ff0678"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}